[gd_scene load_steps=13 format=3 uid="uid://cptknlpmacpcn"]

[ext_resource type="Script" path="res://system/lock_and_keys/door_automatic.gd" id="1_fog8v"]
[ext_resource type="PackedScene" uid="uid://l2kmt5pceodm" path="res://tmp/tmp_door_mesh.tscn" id="2_o4lmi"]
[ext_resource type="Script" path="res://system/bpbfsm/bpbfsm_3d.gd" id="10_v04gg"]
[ext_resource type="Script" path="res://system/lock_and_keys/STATES/DOOR_AUTOMATIC/CLOSING.gd" id="11_ncd5w"]
[ext_resource type="PackedScene" uid="uid://bhe4jmd0jkeqi" path="res://system/bpbfsm/BASE_STATES/main_menu.tscn" id="11_xk1wk"]
[ext_resource type="Script" path="res://system/lock_and_keys/STATES/DOOR_AUTOMATIC/OPENING.gd" id="12_d8m36"]
[ext_resource type="PackedScene" uid="uid://ddbkvp4rvsjje" path="res://system/bpbfsm/BASE_STATES/system_menu.tscn" id="13_t45s0"]
[ext_resource type="PackedScene" uid="uid://c4yu630b1fk4p" path="res://system/bpbfsm/BASE_STATES/gameplay_menu.tscn" id="15_yl7hy"]
[ext_resource type="PackedScene" uid="uid://hxt25njq22y5" path="res://system/bpbfsm/BASE_STATES/event.tscn" id="17_1skvf"]
[ext_resource type="PackedScene" uid="uid://khwqv087wmf6" path="res://system/bpbfsm/BASE_STATES/dialog.tscn" id="19_1p0gq"]
[ext_resource type="PackedScene" uid="uid://cqxldf8npmar2" path="res://system/bpbfsm/BASE_STATES/gameplay.tscn" id="21_ccpp0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_q4vj2"]
radius = 3.0

[node name="door_automatic" type="Area3D"]
collision_layer = 64
collision_mask = 64
script = ExtResource("1_fog8v")

[node name="tmp_door_mesh" parent="." instance=ExtResource("2_o4lmi")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_q4vj2")

[node name="BPBFMS_MAIN" type="Node" parent="."]
script = ExtResource("10_v04gg")
main_path = NodePath("..")
model_path = NodePath("../tmp_door_mesh")
state_init = "GAMEPLAY"

[node name="MAIN_MENU" parent="BPBFMS_MAIN" instance=ExtResource("11_xk1wk")]

[node name="SYSTEM_MENU" parent="BPBFMS_MAIN" instance=ExtResource("13_t45s0")]

[node name="GAMEPLAY_MENU" parent="BPBFMS_MAIN" instance=ExtResource("15_yl7hy")]

[node name="EVENT" parent="BPBFMS_MAIN" instance=ExtResource("17_1skvf")]

[node name="DIALOG" parent="BPBFMS_MAIN" instance=ExtResource("19_1p0gq")]

[node name="GAMEPLAY" parent="BPBFMS_MAIN" instance=ExtResource("21_ccpp0")]
state_init = "CLOSING"

[node name="CLOSING" type="Node" parent="BPBFMS_MAIN/GAMEPLAY"]
script = ExtResource("11_ncd5w")

[node name="OPENING" type="Node" parent="BPBFMS_MAIN/GAMEPLAY"]
script = ExtResource("12_d8m36")
